--- a/src/main.css
+++ b/src/main.css
@@ -221,7 +221,7 @@ html:-moz-full-screen-ancestor {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #24CAFF;
+  color: #666666;
   text-decoration: none;
   -webkit-transition: all .15s ease;
   -moz-transition: all .15s ease;
@@ -234,7 +234,7 @@ html:-moz-full-screen-ancestor {
 
 .reveal .roll span:after {
   color: #fff;
-  background: #1a53a1; }
+  background: #666666; }
 
 /*********************************************
  * IMAGES
@@ -299,7 +299,7 @@ html:-moz-full-screen-ancestor {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #EF2D5E;
+  background: #666666;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
