--- a/src/main.css
+++ b/src/main.css
@@ -232,12 +232,12 @@ html:-moz-full-screen-ancestor {
 }
 
 .reveal a:hover {
-  color: #6FEAFF !important;
+  color: #ffffff !important;
 }
 
 .reveal .roll span:after {
-  color: #fff;
-  background: #666666; }
+  color: #ffffff;
+  background: #999999; }
 
 /*********************************************
  * IMAGES
@@ -303,9 +303,9 @@ html:-moz-full-screen-ancestor {
 
 .reveal .progress span {
   background: #666666;
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  -webkit-transition: width 800ms cubic-bezier(0, 0, 0, 0.2);
+  -moz-transition: width 800ms cubic-bezier(0, 0, 0, 0.2);
+  transition: width 800ms cubic-bezier(0, 0, 0, 0.2); }
 
 /*********************************************
  * ADDED BY KEVIN NGO
@@ -320,7 +320,7 @@ html:-moz-full-screen-ancestor {
 }
 
 .state--bg-blue body {
-  background: #30D8FC;
+  background: #fffffff;
 }
 
 .state--bg-white body {
@@ -355,7 +355,7 @@ html:-moz-full-screen-ancestor {
 }
 
 .reveal section a {
-  color: #24CAFF;
+  color: #999999;
   cursor: pointer;
   background-image: linear-gradient(to bottom, transparent 33%, transparent 33%, transparent 66%, #24CAFF 66%, #24CAFF);
   background-position: 0 1.03em;
@@ -645,4 +645,16 @@ span.buttonText {
 }
 .link-list {
   line-height: 200px;
+}
+#gif-1 {
+  margin-top:4%;
+}
+#when-we-update {
+color: white;
+text-decoration: none !important;
+}
+#as-a-team {
+color: white;
+text-decoration: none !important;
+text-decoration-line:none;
 }
