--- a/src/main.css
+++ b/src/main.css
@@ -302,7 +302,7 @@ html:-moz-full-screen-ancestor {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #666666;
+  background: #e8495f;
   -webkit-transition: width 800ms cubic-bezier(0, 0, 0, 0.2);
   -moz-transition: width 800ms cubic-bezier(0, 0, 0, 0.2);
   transition: width 800ms cubic-bezier(0, 0, 0, 0.2); }
